# simpleOpenCV_VideoStream

./: .gitignore  CMakeLists.txt
src/: main.cpp
